--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uq-uidf/core",
+  "name": "@uq-uidf/body",
   "version": "0.0.0",
-  "description": "The core package that all component packages depend on",
+  "description": "Basic body styles for body HTML elements",
   "keywords": [
     "uq-uidf",
     "uq",
@@ -11,14 +11,13 @@
     "scss",
     "sass",
     "css",
-    "core"
+    "body"
   ],
   "author": "uqmchu <45442566+uqmchu@users.noreply.github.com>",
   "homepage": "https://github.com/uqmchu/uq-uidf-components#readme",
   "license": "ISC",
   "directories": {
     "lib": "lib",
-    "src": "src",
     "test": "__tests__"
   },
   "files": [
