--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,9 +1,31 @@
 {
   "name": "@uq-uidf/form",
   "version": "0.0.0",
-  "description": "form component",
-  "author": "uqmchu <m.chu@uq.edu.au>",
+  "description": "The form component package",
+  "keywords": [
+    "uq-uidf",
+    "uq",
+    "University of Queensland",
+    "user development framework",
+    "design system",
+    "scss",
+    "sass",
+    "css",
+    "form"
+  ],
+  "author": "uqmchu <45442566+uqmchu@users.noreply.github.com>",
   "homepage": "https://github.com/uqmchu/uq-uidf-components#readme",
+  "license": "ISC",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib/*"
+  ],
+  "publishConfig": {
+    "registry": "http://localhost:4873/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uqmchu/uq-uidf-components.git"
