--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uq-uidf/body",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Basic body styles for body HTML elements",
   "keywords": [
     "uq-uidf",
