--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Storybook for HTML instance for uq-uidf component development",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@storybook/html": "^5.2.6",
