Update package.json and lerna.json

--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -6,7 +6,7 @@
     "uq-uidf",
     "uq",
     "University of Queensland",
-    "user development framework",
+    "user interface development framework",
     "design system",
     "scss",
     "sass",
