--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uq-uidf/form",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.0",
   "description": "The form component package",
   "keywords": [
     "uq-uidf",
