--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uq-uidf/button",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.0",
   "description": "The button component package",
   "keywords": [
     "uq-uidf",
