--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,7 +1,8 @@
 {
   "name": "storybook-html",
-  "version": "0.0.1-alpha.0",
-  "description": "Storybook for HTML instance for uq-uidf component development",
+  "version": "0.0.0",
+  "description": "Storybook for HTML instance for uq-uidf component development (do not publish this)",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +15,13 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@storybook/html": "^5.2.6",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "fibers": "^4.0.2",
+    "node-sass": "^4.13.0",
+    "sass": "^1.23.6",
+    "sass-loader": "^8.0.0"
+  },
+  "dependencies": {
+    "@uq-uidf/core": "0.0.0"
   }
 }
