--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,11 @@
     "css",
     "core"
   ],
-  "author": "University of Queensland",
+  "author": { 
+    "name": "University of Queensland",
+    "email": "webservices@uq.edu.au",
+    "url": "https://uq.edu.au"
+  },
   "homepage": "https://github.com/uqmchu/uq-uidf-components#readme",
   "license": "ISC",
   "directories": {
