--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -10,7 +10,11 @@
     "build-storybook": "build-storybook"
   },
   "keywords": [],
-  "author": "",
+  "author": { 
+    "name": "University of Queensland",
+    "email": "webservices@uq.edu.au",
+    "url": "https://uq.edu.au"
+  },
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
