--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,6 +42,9 @@
   "bugs": {
     "url": "https://github.com/uqmchu/uq-uidf-components/issues"
   },
+  "peerDependencies": {
+    "font-awesome": "^4.7.0"
+  },
   "devDependencies": {
     "compass-mixins": "^0.12.10",
     "font-awesome": "^4.7.0",
