--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -39,5 +39,11 @@
   },
   "bugs": {
     "url": "https://github.com/uqmchu/uq-uidf-components/issues"
+  },
+  "devDependencies": {
+    "@uq-uidf/core": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@uq-uidf/core": "^1.0.0"
   }
 }
