--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uq-uidf/body",
   "version": "0.0.0",
-  "description": "Basic body styles for body HTML elements",
+  "description": "Basic styles for HTML elements",
   "keywords": [
     "uq-uidf",
     "uq",
@@ -18,26 +18,36 @@
     "email": "webservices@uq.edu.au",
     "url": "https://uq.edu.au"
   },
-  "homepage": "https://github.com/uqmchu/uq-uidf-components#readme",
+  "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
+    "dist": "dist",
     "lib": "lib",
+    "src": "src",
     "test": "__tests__"
   },
   "files": [
-    "lib/*"
+    "dist/*",
+    "lib/*",
+    "src/*"
   ],
   "publishConfig": {
     "registry": "http://localhost:4873/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uqmchu/uq-uidf-components.git"
+    "url": "git+https://github.com/uq-its-ss/user-interface-development-framework.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/uqmchu/uq-uidf-components/issues"
+    "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
+  },
+  "dependencies": {
+    "foundation-sites": "^5.5.3"
+  },
+  "peerDependencies": {
+    "@uq-uidf/core": "^0.0.0"
   }
 }
