--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -25,9 +25,11 @@
     "sass-loader": "^8.0.0"
   },
   "dependencies": {
+    "@uq-uidf/alert": "^0.0.0",
+    "@uq-uidf/body": "^0.0.0",
+    "@uq-uidf/button": "^0.0.0",
     "@uq-uidf/core": "^0.0.0",
     "@uq-uidf/form": "^0.0.0",
-    "@uq-uidf/button": "^0.0.0",  
     "font-awesome": "^4.7.0"
   }
 }
