--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -29,7 +29,9 @@
     "@uq-uidf/body": "^0.0.0",
     "@uq-uidf/button": "^0.0.0",
     "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/footer": "^0.0.0",
     "@uq-uidf/form": "^0.0.0",
+    "@uq-uidf/header": "^0.0.0",
     "font-awesome": "^4.7.0"
   }
 }
