--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -21,13 +21,10 @@
   "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
-    "dist": "dist",
     "lib": "lib",
-    "src": "src",
     "test": "__tests__"
   },
   "files": [
-    "dist/*",
     "lib/*",
     "src/*"
   ],
@@ -42,6 +39,7 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
+    "@uq-uidf/core": "^0.0.0",
     "foundation-sites": "^5.5.3"
   },
   "peerDependencies": {
