--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uq-uidf/form",
   "version": "0.0.0",
-  "description": "The form component package",
+  "description": "Form elements",
   "keywords": [
     "uq-uidf",
     "uq",
@@ -25,7 +25,8 @@
     "test": "__tests__"
   },
   "files": [
-    "lib/*"
+    "lib/*",
+    "src/*"
   ],
   "repository": {
     "type": "git",
@@ -38,6 +39,8 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
+    "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/button": "^0.0.0",
     "foundation-sites": "^5.5.3"
   },
   "peerDependencies": {
