--- a/packages/alert-classic/package.json
+++ b/packages/alert-classic/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uq-uidf/alert",
+  "name": "@uq-uidf/alert-classic",
   "version": "0.0.0",
-  "description": "Alert component",
+  "description": "The styles for page alerts",
   "keywords": [
     "uq-uidf",
     "uq",
@@ -25,8 +25,7 @@
     "test": "__tests__"
   },
   "files": [
-    "lib/*",
-    "src/*"
+    "lib/*"
   ],
   "repository": {
     "type": "git",
@@ -39,10 +38,10 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "foundation-sites": "^5.5.3"
   },
   "peerDependencies": {
-    "@uq-uidf/button-classic": "^0.0.0",
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/button-classic": "^0.0.0"
   }
 }
