ITSADSSD-19987 Card package initial

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -33,6 +33,7 @@
     "@uq-uidf/blockquote": "^0.0.0",
     "@uq-uidf/button-classic": "^0.0.0",
     "@uq-uidf/button": "^0.0.0",
+    "@uq-uidf/card": "^0.0.0",
     "@uq-uidf/core": "^0.0.0",
     "@uq-uidf/footer-classic": "^0.0.0",
     "@uq-uidf/footer": "^0.0.0",
