Main-menu package initial

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -38,6 +38,7 @@
     "@uq-uidf/footer": "^0.0.0",
     "@uq-uidf/form": "^0.0.0",
     "@uq-uidf/header-classic": "^0.0.0",
+    "@uq-uidf/main-menu": "^0.0.0",
     "font-awesome": "^4.7.0"
   }
 }
