--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -40,6 +40,7 @@
     "@uq-uidf/footer": "^0.0.0",
     "@uq-uidf/form": "^0.0.0",
     "@uq-uidf/header-classic": "^0.0.0",
+    "@uq-uidf/lists": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/main-menu": "^0.0.0",
     "font-awesome": "^4.7.0"
