--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -42,6 +42,7 @@
     "@uq-uidf/header-classic": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/main-menu": "^0.0.0",
+    "@uq-uidf/tabs": "^0.0.0",
     "font-awesome": "^4.7.0"
   }
 }
