Accordion package initial

--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uq-uidf/accordion",
   "version": "0.0.0",
-  "description": "Package for accordion component",
+  "description": "Accordion component",
   "keywords": [
     "uq-uidf",
     "uq",
@@ -26,7 +26,8 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib/*",
+    "src/*"
   ],
   "repository": {
     "type": "git",
@@ -37,5 +38,12 @@
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
+  },
+  "dependencies": {
+    "@uq-uidf/core": "^0.0.0",
+    "domready": "^1.0.8"
+  },
+  "peerDependencies": {
+    "@uq-uidf/core": "^0.0.0"
   }
 }
