--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/html": "^5.3.17",
     "babel-loader": "^8.0.6",
@@ -28,7 +29,6 @@
     "typescript": "^3.8.2"
   },
   "dependencies": {
-    "@storybook/addon-docs": "^5.3.18",
     "@uq-uidf/accordion": "^0.0.0",
     "@uq-uidf/alert": "^0.0.0",
     "@uq-uidf/alert-classic": "^0.0.0",
@@ -48,6 +48,9 @@
     "@uq-uidf/main-menu": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/tabs": "^0.0.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "joi-browser": "^13.4.0",
+    "underscore": "^1.10.2",
+    "zxcvbn": "^4.4.2"
   }
 }
