Remove duplicated core styles in Storybook

--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -37,6 +37,9 @@
   "bugs": {
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
+  "dependencies": {
+    "@uq-uidf/core": "^0.0.0"
+  },
   "peerDependencies": {
     "@uq-uidf/core": "^0.0.0"
   }
