--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@storybook/addon-backgrounds": "^5.3.18",
     "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/html": "^5.3.17",
@@ -36,7 +37,6 @@
     "@uq-uidf/body": "^0.0.0",
     "@uq-uidf/breadcrumb": "^0.0.0",
     "@uq-uidf/button": "^0.0.0",
-    "@uq-uidf/button-classic": "^0.0.0",
     "@uq-uidf/card": "^0.0.0",
     "@uq-uidf/core": "^0.0.0",
     "@uq-uidf/footer": "^0.0.0",
