--- a/packages/blockquote/package.json
+++ b/packages/blockquote/package.json
@@ -1,19 +1,31 @@
 {
   "name": "@uq-uidf/blockquote",
   "version": "0.0.0",
-  "description": "> TODO: description",
-  "author": "Timmy George <timmy.george@uq.edu.au>",
+  "description": "Blockquote component",
+  "keywords": [
+    "uq-uidf",
+    "uq",
+    "University of Queensland",
+    "user interface development framework",
+    "design system",
+    "scss",
+    "sass",
+    "css",
+    "blockquote"
+  ],
+  "author": {
+    "name": "University of Queensland",
+    "email": "webservices@uq.edu.au",
+    "url": "https://uq.edu.au"
+  },
   "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
   "main": "lib/blockquote.js",
   "directories": {
-    "dist": "dist",
     "lib": "lib",
-    "src": "src",
     "test": "__tests__"
   },
   "files": [
-    "dist/*",
     "lib/*",
     "src/*"
   ],
@@ -26,5 +38,11 @@
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
+  },
+  "dependencies": {
+    "@uq-uidf/core": "^0.0.0"
+  },
+  "peerDependencies": {
+    "@uq-uidf/core": "^0.0.0"
   }
 }
