--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@uq-uidf/core": "^0.0.0",
+    "font-awesome": "^4.7.0",
     "foundation-sites": "^5.5.3"
   },
   "peerDependencies": {
