--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -38,7 +38,8 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0",
+    "font-awesome": "^4.7.0"
   },
   "peerDependencies": {
     "@uq-uidf/core": "^0.0.0"
