--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -42,6 +42,7 @@
     "@uq-uidf/core": "^0.0.0"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0",
+    "font-awesome": "^4.7.0"
   }
 }
