--- a/packages/main-menu/package.json
+++ b/packages/main-menu/package.json
@@ -39,7 +39,9 @@
   },
   "dependencies": {
     "@uq-uidf/core": "^0.0.0",
-    "domready": "^1.0.8"
+    "domready": "^1.0.8",
+    "font-awesome": "^4.7.0",
+    "foundation-sites": "^5.5.3"
   },
   "peerDependencies": {
     "@uq-uidf/core": "^0.0.0"
