package.json amend

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -43,6 +43,7 @@
     "@uq-uidf/form": "^0.0.0",
     "@uq-uidf/grid-menu": "^0.0.0",
     "@uq-uidf/header-classic": "^0.0.0",
+    "@uq-uidf/icon": "^0.0.0",
     "@uq-uidf/lists": "^0.0.0",
     "@uq-uidf/main-menu": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
