--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -20,14 +20,27 @@
   "bugs": {
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
+  "engines": {
+    "node": ">=13.2.0"
+  },
+  "engineStrict": true,
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.10.0",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/stream": "^1.0.0",
     "fibers": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
-    "sass": "^1.26.5"
+    "rollup": "^2.10.9",
+    "sass": "^1.26.5",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "@uq-uidf/accordion": "^0.0.0",
