--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -61,6 +61,7 @@
     "@uq-uidf/main-menu": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/tabs": "^0.0.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "regenerator-runtime": "^0.13.5"
   }
 }
