Build error solving

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -46,6 +46,7 @@
     "@uq-uidf/icon": "^0.0.0",
     "@uq-uidf/lists": "^0.0.0",
     "@uq-uidf/main-menu": "^0.0.0",
+    "@uq-uidf/pagination": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/tabs": "^0.0.0",
     "font-awesome": "^4.7.0",
