--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -24,5 +24,11 @@
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
+  },
+  "dependencies": {
+    "@uq-uidf/core": "^0.0.0"
+  },
+  "peerDependencies": {
+    "@uq-uidf/core": "^0.0.0"
   }
 }
