--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -42,6 +42,7 @@
     "@uq-uidf/footer-classic": "^0.0.0",
     "@uq-uidf/form": "^0.0.0",
     "@uq-uidf/grid-menu": "^0.0.0",
+    "@uq-uidf/header": "^0.0.0",
     "@uq-uidf/header-classic": "^0.0.0",
     "@uq-uidf/icon": "^0.0.0",
     "@uq-uidf/lists": "^0.0.0",
