page header component review amends

--- a/packages/main-menu/package.json
+++ b/packages/main-menu/package.json
@@ -11,7 +11,7 @@
     "sass",
     "css",
     "navigation",
-    "header"
+    "page-header"
   ],
   "author": {
     "name": "University of Queensland",
