Restructure repo-wide docs based on outline, remove other placeholders

--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -22,8 +22,7 @@
   "license": "ISC",
   "main": "lib/accordion.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib/*",
