--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -20,9 +20,7 @@
   "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
-    "lib": "lib",
-    "src": "src",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib/*",
@@ -40,9 +38,21 @@
   },
   "dependencies": {
     "@uq-uidf/accordion": "^0.0.0",
+    "@uq-uidf/alert": "^0.0.0",
+    "@uq-uidf/blockquote": "^0.0.0",
     "@uq-uidf/body": "^0.0.0",
+    "@uq-uidf/breadcrumb": "^0.0.0",
     "@uq-uidf/button": "^0.0.0",
+    "@uq-uidf/card": "^0.0.0",
     "@uq-uidf/core": "^0.0.0",
-    "@uq-uidf/form": "^0.0.0"
+    "@uq-uidf/footer": "^0.0.0",
+    "@uq-uidf/form": "^0.0.0",
+    "@uq-uidf/grid-menu": "^0.0.0",
+    "@uq-uidf/icon": "^0.0.0",
+    "@uq-uidf/lists": "^0.0.0",
+    "@uq-uidf/main-menu": "^0.0.0",
+    "@uq-uidf/pagination": "^0.0.0",
+    "@uq-uidf/pane": "^0.0.0",
+    "@uq-uidf/tabs": "^0.0.0"
   }
 }
