--- a/packages/blockquote/package.json
+++ b/packages/blockquote/package.json
@@ -22,8 +22,7 @@
   "license": "ISC",
   "main": "lib/blockquote.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib/*",
