--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -21,15 +21,12 @@
     "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
     "license": "ISC",
     "directories": {
-        "lib": "lib",
-        "test": "__tests__"
+        "lib": "lib"
     },
     "files": [
-        "lib/*"
+        "lib/*",
+        "src/*"
     ],
-    "publishConfig": {
-        "registry": "http://localhost:4873/"
-    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/uq-its-ss/user-interface-development-framework.git"
