--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -20,10 +20,8 @@
   },
   "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
-  "main": "lib/icon.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib/*",
@@ -34,7 +32,6 @@
     "url": "git+https://github.com/uq-its-ss/user-interface-development-framework.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
     "generate": "postcss src/css/*.css --base src --dir temp"
   },
   "bugs": {
