--- a/packages/lists/package.json
+++ b/packages/lists/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uq-uidf/lists",
   "version": "0.0.0",
-  "description": "The button component package",
+  "description": "The list component package",
   "keywords": [
     "uq-uidf",
     "uq",
@@ -21,8 +21,7 @@
   "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib/*",
