--- a/packages/pane/package.json
+++ b/packages/pane/package.json
@@ -21,10 +21,10 @@
   "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
+    "lib/*",
     "src/*"
   ],
   "repository": {
