updated private design

--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -58,6 +58,7 @@
     "@uq-uidf/lists": "^0.0.0",
     "@uq-uidf/main-menu": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
+    "@uq-uidf/sections": "^0.0.0",
     "@uq-uidf/tabs": "^0.0.0",
     "font-awesome": "^4.7.0"
   }
