--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uq-uidf/card",
+  "name": "@uqmchu/card",
   "version": "0.0.0",
   "description": "Card components",
   "keywords": [
@@ -18,7 +18,7 @@
     "email": "webservices@uq.edu.au",
     "url": "https://uq.edu.au"
   },
-  "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
+  "homepage": "https://github.com/uqmchu/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
     "lib": "lib"
@@ -29,19 +29,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uq-its-ss/user-interface-development-framework.git"
+    "url": "git+https://github.com/uqmchu/user-interface-development-framework.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
+    "url": "https://github.com/uqmchu/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0",
+    "@uqmchu/core": "^0.0.0",
     "font-awesome": "^4.7.0"
   },
   "peerDependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uqmchu/core": "^0.0.0"
   }
 }
