--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uq-uidf/core",
+  "name": "@uqmchu/core",
   "version": "0.0.0",
   "description": "The core package that all component packages depend on",
   "keywords": [
@@ -18,7 +18,7 @@
     "email": "webservices@uq.edu.au",
     "url": "https://uq.edu.au"
   },
-  "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
+  "homepage": "https://github.com/uqmchu/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
     "lib": "lib"
@@ -29,13 +29,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uq-its-ss/user-interface-development-framework.git"
+    "url": "git+https://github.com/uqmchu/user-interface-development-framework.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
+    "url": "https://github.com/uqmchu/user-interface-development-framework/issues"
   },
   "dependencies": {
     "compass-mixins": "^0.12.10",
