--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uqmchu/accordion",
+  "name": "@uq-uidf/accordion",
   "version": "0.0.0",
   "description": "Accordion component",
   "keywords": [
@@ -18,7 +18,7 @@
     "email": "webservices@uq.edu.au",
     "url": "https://uq.edu.au"
   },
-  "homepage": "https://github.com/uqmchu/user-interface-development-framework#readme",
+  "homepage": "https://github.com/uq-uidf/user-interface-development-framework#readme",
   "license": "ISC",
   "main": "lib/accordion.js",
   "directories": {
@@ -30,19 +30,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uqmchu/user-interface-development-framework.git"
+    "url": "git+https://github.com/uq-uidf/user-interface-development-framework.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
-    "url": "https://github.com/uqmchu/user-interface-development-framework/issues"
+    "url": "https://github.com/uq-uidf/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uqmchu/core": "^0.0.0",
+    "@uq-uidf/core": "^0.0.0",
     "domready": "^1.0.8"
   },
   "peerDependencies": {
-    "@uqmchu/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0"
   }
 }
