--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uqmchu/icon",
+  "name": "@uq-uidf/icon",
   "version": "0.0.0",
   "description": "Icon component",
   "keywords": [
@@ -18,7 +18,7 @@
     "email": "webservices@uq.edu.au",
     "url": "https://uq.edu.au"
   },
-  "homepage": "https://github.com/uqmchu/user-interface-development-framework#readme",
+  "homepage": "https://github.com/uq-uidf/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
     "lib": "lib"
@@ -29,19 +29,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uqmchu/user-interface-development-framework.git"
+    "url": "git+https://github.com/uq-uidf/user-interface-development-framework.git"
   },
   "scripts": {
     "generate": "postcss src/css/*.css --base src --dir temp"
   },
   "bugs": {
-    "url": "https://github.com/uqmchu/user-interface-development-framework/issues"
+    "url": "https://github.com/uq-uidf/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uqmchu/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0"
   },
   "peerDependencies": {
-    "@uqmchu/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0"
   },
   "devDependencies": {
     "postcss-cli": "^7.1.1",
