--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -21,11 +21,9 @@
   "homepage": "https://github.com/uq-its-ss/user-interface-development-framework#readme",
   "license": "ISC",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
-    "component/*",
     "lib/*",
     "src/*"
   ],
