foundation-global/grid/block-grid: fill in

--- a/packages/foundation-block-grid/package.json
+++ b/packages/foundation-block-grid/package.json
@@ -11,6 +11,7 @@
     "scss",
     "sass",
     "css",
+    "foundation 5",
     "block grid"
   ],
   "author": {
@@ -38,9 +39,9 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/foundation-global": "^0.0.0"
   },
   "peerDependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/foundation-global": "^0.0.0"
   }
 }
