--- a/packages/foundation-global/package.json
+++ b/packages/foundation-global/package.json
@@ -11,6 +11,7 @@
     "scss",
     "sass",
     "css",
+    "foundation 5",
     "constants"
   ],
   "author": {
@@ -36,5 +37,11 @@
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
+  },
+  "dependencies": {
+    "@uq-uidf/core": "^0.0.0"
+  },
+  "peerDependencies": {
+    "@uq-uidf/core": "^0.0.0"
   }
 }
