--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,5 +41,8 @@
     "compass-mixins": "^0.12.10",
     "font-awesome": "^4.7.0",
     "foundation-sites": "^5.5.3"
+  },
+  "peerDependencies": {
+    "@uq-uidf/foundation-global": "^0.0.0"
   }
 }
