--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -40,10 +40,12 @@
   },
   "dependencies": {
     "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0",
     "font-awesome": "^4.7.0",
     "foundation-sites": "^5.5.3"
   },
   "peerDependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0"
   }
 }
