--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -39,9 +39,11 @@
   },
   "dependencies": {
     "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0",
     "font-awesome": "^4.7.0"
   },
   "peerDependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0"
   }
 }
