--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -38,11 +38,15 @@
   "bugs": {
     "url": "https://github.com/uq-uidf/user-interface-development-framework/issues"
   },
-  "peerDependencies": {
-    "@uq-uidf/core": "^0.0.0"
-  },
   "dependencies": {
     "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-block-grid": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0",
     "font-awesome": "^4.7.0"
+  },
+  "peerDependencies": {
+    "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-block-grid": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0"
   }
 }
