--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -40,6 +40,10 @@
     "@uq-uidf/core": "^0.0.0",
     "@uq-uidf/footer": "^0.0.0",
     "@uq-uidf/form": "^0.0.0",
+    "@uq-uidf/foundation-block-grid": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0",
+    "@uq-uidf/foundation-grid": "^0.0.0",
+    "@uq-uidf/foundation-misc": "^0.0.0",
     "@uq-uidf/grid-menu": "^0.0.0",
     "@uq-uidf/header": "^0.0.0",
     "@uq-uidf/icon": "^0.0.0",
