--- a/packages/lists/package.json
+++ b/packages/lists/package.json
@@ -38,8 +38,7 @@
     "url": "https://github.com/uq-uidf/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0",
-    "foundation-sites": "^5.5.3"
+    "@uq-uidf/core": "^0.0.0"
   },
   "peerDependencies": {
     "@uq-uidf/core": "^0.0.0"
