--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -53,6 +53,11 @@
     "@uq-uidf/core": "^0.0.0",
     "@uq-uidf/footer": "^0.0.0",
     "@uq-uidf/form": "^0.0.0",
+    "@uq-uidf/foundation-block-grid": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0",
+    "@uq-uidf/foundation-grid": "^0.0.0",
+    "@uq-uidf/foundation-misc": "^0.0.0",
+    "@uq-uidf/foundation-normalise": "^0.0.0",
     "@uq-uidf/grid-menu": "^0.0.0",
     "@uq-uidf/icon": "^0.0.0",
     "@uq-uidf/lists": "^0.0.0",
