added header dependencies and markup to example output

--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -59,6 +59,7 @@
     "@uq-uidf/foundation-misc": "^0.0.0",
     "@uq-uidf/foundation-normalise": "^0.0.0",
     "@uq-uidf/grid-menu": "^0.0.0",
+    "@uq-uidf/header": "^0.0.0",
     "@uq-uidf/icon": "^0.0.0",
     "@uq-uidf/lists": "^0.0.0",
     "@uq-uidf/main-menu": "^0.0.0",
