main-navigation: add variable dependencies

--- a/packages/main-navigation/package.json
+++ b/packages/main-navigation/package.json
@@ -38,9 +38,13 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0",
+    "@uq-uidf/foundation-grid": "^0.0.0"
   },
   "peerDependencies": {
-    "@uq-uidf/core": "^0.0.0"
+    "@uq-uidf/core": "^0.0.0",
+    "@uq-uidf/foundation-global": "^0.0.0",
+    "@uq-uidf/foundation-grid": "^0.0.0"
   }
 }
