main-navigation: change package name to site-header, and refactor

--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -62,9 +62,9 @@
     "@uq-uidf/header": "^0.0.0",
     "@uq-uidf/icon": "^0.0.0",
     "@uq-uidf/lists": "^0.0.0",
-    "@uq-uidf/main-navigation": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/sections": "^0.0.0",
+    "@uq-uidf/site-header": "^0.0.0",
     "@uq-uidf/tabs": "^0.0.0",
     "font-awesome": "^4.7.0"
   }
